syntax = "proto3";

package auth.v1;

import "api/google/api/annotations.proto";
import "api/google/protobuf/empty.proto";
import "api/google/protobuf/timestamp.proto";

option go_package = "gitlab.crja72.ru/golang/2025/spring/course/projects/go9/gogetnote/pkg/api/auth/v1;authv1";

// UserService предоставляет методы для управления профилями пользователей
service UserService {
  // GetUserProfile получает информацию о текущем пользователе
  rpc GetUserProfile(GetUserProfileRequest) returns (UserProfileResponse) {
    option (google.api.http) = {
      get: "/v1/users/me"
    };
  }

  // UpdateUserProfile обновляет информацию профиля текущего пользователя
  rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UserProfileResponse) {
    option (google.api.http) = {
      patch: "/v1/users/me"
      body: "*"
    };
  }

  // DeleteUserAccount удаляет аккаунт текущего пользователя
  rpc DeleteUserAccount(DeleteUserAccountRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/users/me"
    };
  }
}

// Пустой запрос для получения профиля текущего пользователя
// Идентификация пользователя происходит через токен в заголовке запроса
message GetUserProfileRequest {}

// Запрос на обновление профиля пользователя
message UpdateUserProfileRequest {
  // Новое имя пользователя (опционально)
  optional string username = 1;
  
  // Новый email пользователя (опционально)
  optional string email = 2;
  
  // Текущий пароль (требуется для подтверждения изменений)
  string current_password = 3;
  
  // Новый пароль (опционально)
  optional string new_password = 4;
  
  // Подтверждение нового пароля (обязательно, если указан новый пароль)
  optional string new_password_confirmation = 5;
}

// Запрос на удаление аккаунта пользователя
message DeleteUserAccountRequest {
  // Пароль для подтверждения удаления
  string password = 1;
  
  // Причина удаления (опционально)
  optional string reason = 2;
}

// Ответ с информацией о профиле пользователя
message UserProfileResponse {
  // Уникальный идентификатор пользователя
  string user_id = 1;
  
  // Email пользователя
  string email = 2;
  
  // Имя пользователя
  string username = 3;
  
  // Дата создания аккаунта
  google.protobuf.Timestamp created_at = 4;
  
  // Дата последнего обновления аккаунта
  google.protobuf.Timestamp updated_at = 5;
}